<resources>
    <string name="app_name">AuroraAI</string>
    <string name="button">Button</string>
    <string name="aurora_ai">Aurora AI</string>
    <string name="wallet">Wallet</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="amount">Amount</string>
    <string name="operation">Operation</string>
    <string name="submit">Submit</string>
    <string name="whatsapp_suffix">[Send using Aurora]</string>
    <string name="reference">Reference</string>
    <string name="homepage">Homepage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="successful">Successful</string>
</resources>